<resources>
    <string name="app_name">TrailMe</string>
    <string name="title_activity_login">TrailMe</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Trail Me</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="google_app_id">trailme-1268</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_map">TrailMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">Register</string>
    <string name="default_user">No User</string>
    <string name="filter">Filter Items</string>

    <!-- Stars checkboxes -->
    <string name="star1_checkbox_text">Star 1</string>
    <string name="star2_checkbox_text">Star 2</string>
    <string name="star3_checkbox_text">Star 3</string>
    <string name="star4_checkbox_text">Star 4</string>
    <string name="star5_checkbox_text">Star 5</string>
    <string name="title_activity_maps">Map</string>
</resources>
